--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "erela.js": "latest",
     "erela.js-spotify": "^1.0.1",
     "fs": "0.0.1-security",
+    "happycalculator": "^1.3.6",
     "i": "^0.3.6",
     "lavaclient": "^3.1.2",
     "lavacord": "^1.1.9",
