--- a/config.exemple.json
+++ b/config.exemple.json
@@ -1,9 +1,11 @@
 {
     "token": "TOKEN",
-    "prefix": "e.",
-    "versão": "3.0.0",
-    "color": "802222",
-    "eval": ["ID", "ID2"],
+    "prefix": "PREFIXO",
+    "versão": "VERSÃO",
+    "color": "cor",
+    "eval": ["ID"],
     "clientID": "Spotify ID",
     "clientSecret": "Spotify Secret"
 }
+
+//Pegar o cleintID e clientSecret do spotify aqui https://developer.spotify.com/dashboard/applications
