--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "ascii-table": "0.0.9",
     "ayla-npm": "^1.7.4",
+    "byte-size": "^7.0.0",
     "common-tags": "^1.8.0",
     "discord.js": "^12.3.1",
     "erela.js": "latest",
     "erela.js-spotify": "^1.0.1",
     "fs": "0.0.1-security",
+    "glob": "^7.1.6",
     "happycalculator": "^1.3.6",
     "humanize-duration": "^3.23.1",
     "i": "^0.3.6",
