--- a/package.json
+++ b/package.json
@@ -9,20 +9,15 @@
   "author": "BONEE",
   "license": "ISC",
   "dependencies": {
-    "ascii-table": "0.0.9",
-    "ayla-npm": "^1.7.4",
     "byte-size": "^7.0.0",
-    "common-tags": "^1.8.0",
     "discord.js": "^12.3.1",
     "erela.js": "latest",
-    "erela.js-spotify": "^1.0.1",
+    "erela.js-spotify": "latest",
     "fs": "0.0.1-security",
     "glob": "^7.1.6",
     "happycalculator": "^1.3.6",
     "humanize-duration": "^3.23.1",
     "i": "^0.3.6",
-    "lavaclient": "^3.1.2",
-    "lavacord": "^1.1.9",
     "moment": "^2.28.0",
     "moment-duration-format": "^2.3.2",
     "node-fetch": "^2.6.1",
