--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "byte-size": "^7.0.0",
+    "common-tags": "^1.8.0",
     "discord.js": "^12.3.1",
     "erela.js": "latest",
     "erela.js-spotify": "latest",
@@ -18,6 +19,7 @@
     "happycalculator": "^1.3.6",
     "humanize-duration": "^3.23.1",
     "i": "^0.3.6",
+    "lowdb": "^1.0.0",
     "moment": "^2.28.0",
     "moment-duration-format": "^2.3.2",
     "node-fetch": "^2.6.1",
