--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "BONEE",
   "license": "ISC",
   "dependencies": {
+    "better-sqlite3": "^7.1.1",
     "byte-size": "^7.0.0",
     "common-tags": "^1.8.0",
     "discord.js": "^12.3.1",
