--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "better-sqlite3": "^7.1.1",
+    "better-sqlite-pool": "latest",
     "byte-size": "^7.0.0",
     "colors": "^1.4.0",
     "common-tags": "^1.8.0",
