--- a/Structures/jsons/config.example.json
+++ b/Structures/jsons/config.example.json
@@ -4,5 +4,9 @@
     "versão": "VERSÃO",
     "color": "cor",
     "clientID": "Spotify ID",
-    "clientSecret": "Spotify Secret"
+    "clientSecret": "Spotify Secret",
+    "hook": {
+        "id": "Webhook id",
+        "token": "Webhook token"
+    }
 }
