--- a/package.json
+++ b/package.json
@@ -1,32 +1,40 @@
 {
   "name": "eclipse",
-  "version": "1.0.0",
+  "version": "1.4.0",
   "description": "sim",
-  "main": "index.js",
+  "repository": "https://github.com/BONEE4/Eclipse",
+  "main": "shard.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "BONEE",
   "license": "ISC",
   "dependencies": {
+    "@sindresorhus/to-milliseconds": "^1.2.0",
+    "ascii-table": "0.0.9",
     "better-sqlite3": "^7.1.1",
     "byte-size": "^7.0.0",
     "colors": "^1.4.0",
     "common-tags": "^1.8.0",
+    "discord-giveaways": "^4.2.1",
     "discord.js": "^12.3.1",
     "enmap": "^5.7.3",
     "erela.js": "latest",
     "erela.js-spotify": "latest",
     "fs": "0.0.1-security",
+    "get-image-colors": "^4.0.0",
     "glob": "^7.1.6",
     "happycalculator": "^1.3.6",
     "humanize-duration": "^3.23.1",
     "i": "^0.3.6",
+    "kurasuta": "^2.2.0",
     "moment": "^2.28.0",
     "moment-duration-format": "^2.3.2",
     "node-fetch": "^2.6.1",
     "npm": "^6.14.8",
     "os-utils": "0.0.14",
+    "path": "^0.12.7",
+    "pretty-ms": "^7.0.1",
     "url": "^0.11.0"
   }
 }
