--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@sindresorhus/to-milliseconds": "^1.2.0",
+    "ascii-art": "^2.5.0",
     "ascii-table": "0.0.9",
-    "better-sqlite3": "^7.1.1",
     "better-sqlite-pool": "latest",
+    "better-sqlite3": "^7.1.1",
     "byte-size": "^7.0.0",
     "colors": "^1.4.0",
     "common-tags": "^1.8.0",
@@ -22,6 +23,7 @@
     "enmap": "^5.7.3",
     "erela.js": "latest",
     "erela.js-spotify": "latest",
+    "figlet": "^1.5.0",
     "fs": "0.0.1-security",
     "get-image-colors": "^4.0.0",
     "glob": "^7.1.6",
