--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ascii-table": "0.0.9",
     "better-sqlite-pool": "latest",
     "better-sqlite3": "^7.1.1",
+    "boats.js": "^2.5.0",
     "byte-size": "^7.0.0",
     "canvacord": "^5.0.7",
     "canvas": "^2.6.1",
@@ -24,8 +25,9 @@
     "discord.js": "^12.3.1",
     "discord.js-light": "^3.3.3",
     "enmap": "^5.7.3",
-    "erela.js": "latest",
+    "erela.js": "github:Solaris9/erela.js#build",
     "erela.js-spotify": "latest",
+    "eris": "^0.13.3",
     "fs": "0.0.1-security",
     "get-image-colors": "^4.0.0",
     "glob": "^7.1.6",
@@ -35,6 +37,7 @@
     "kurasuta": "^2.2.0",
     "moment": "^2.28.0",
     "moment-duration-format": "^2.3.2",
+    "music-progress-bar": "^1.0.4",
     "node-fetch": "^2.6.1",
     "npm": "^6.14.8",
     "os-utils": "0.0.14",
