--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
     "byte-size": "^7.0.0",
     "canvacord": "^5.0.7",
     "canvas": "^2.6.1",
+    "child_process": "^1.0.2",
     "colors": "^1.4.0",
     "common-tags": "^1.8.0",
+    "dblapi.js": "^2.4.1",
+    "discord-backup": "^2.2.5",
     "discord-giveaways": "^4.2.1",
+    "discord-temp-channels": "^1.0.3",
     "discord.bots.gg": "^0.3.0-v1.2",
     "discord.js": "^12.3.1",
+    "discord.js-collector": "^1.6.7",
     "discord.js-light": "^3.3.3",
     "enmap": "^5.7.3",
     "erela.js": "github:Solaris9/erela.js#build",
